--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-merchantId = xj56dtp7jtrnyxf9
-publicKey = 6z2v272h747sjrwq
-privateKey = 87e3c64f9309994cb59b49fbc66eaef6
+merchantId = "xj56dtp7jtrnyxf9"
+publicKey = "6z2v272h747sjrwq"
+privateKey = "87e3c64f9309994cb59b49fbc66eaef6"
